[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/PlayerBullet.gd" type="Script" id=1]
[ext_resource path="res://Art/Beams/beams.png" type="Texture" id=2]

[sub_resource type="CapsuleShape2D" id=1]
radius = 4.94247
height = 44.7841

[node name="PlayerBullet" type="Area2D"]
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 156, 211, 55, 96 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="area_entered" from="." to="." method="_on_PlayerBullet_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_PlayerBullet_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
